--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "type": "library",
     "version": "1.0.0",
     "require": {
-        "php": "^7.2.0"
+        "php": "^7.2.0",
+        "illuminate/support": "^5.6.0"
     },
     "require-dev": {
         "ext-mbstring": "*",
