--- a/composer.json
+++ b/composer.json
@@ -4,17 +4,16 @@
     "keywords": ["datamedrix", "support", "toolset", "tools", "collection"],
     "license": "MIT",
     "type": "library",
-    "version": "1.1.1",
+    "version": "1.1.2",
     "require": {
         "php": "^7.2.0",
-        "illuminate/support": "^5.6.0"
+        "illuminate/support": "^5.6.0|^6.0.0"
     },
     "require-dev": {
         "ext-mbstring": "*",
-        "friendsofphp/php-cs-fixer": "^2.10",
-        "fzaninotto/faker": "~1.7.1",
-        "mockery/mockery": "^1.0",
-        "phpunit/phpunit": "^7.0"
+        "friendsofphp/php-cs-fixer": "^2.15",
+        "mockery/mockery": "^1.2",
+        "phpunit/phpunit": "^8.3"
     },
     "autoload": {
         "psr-4": {
