--- a/composer.json
+++ b/composer.json
@@ -4,10 +4,10 @@
     "keywords": ["datamedrix", "support", "toolset", "tools", "collection"],
     "license": "MIT",
     "type": "library",
-    "version": "1.1.2",
+    "version": "1.1.3",
     "require": {
         "php": "^7.2.0",
-        "illuminate/support": "^5.6.0|^6.0.0"
+        "illuminate/support": "^5.6.0"
     },
     "require-dev": {
         "ext-mbstring": "*",
