--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "require": {
         "php": "^7.2.0",
         "illuminate/contracts": "~5.8.0|^6.0.0",
+        "illuminate/database": "~5.8.0|^6.0.0",
         "illuminate/support": "~5.8.0|^6.0.0"
     },
     "require-dev": {
