--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,15 @@
     "type": "library",
     "version": "2.3.0",
     "require": {
-        "php": "^7.2.0",
-        "illuminate/contracts": "~5.8.0|^6.0.0",
-        "illuminate/database": "~5.8.0|^6.0.0",
-        "illuminate/support": "~5.8.0|^6.0.0"
+        "php": "^7.4.0",
+        "illuminate/contracts": "^6.0.0",
+        "illuminate/database": "^6.0.0",
+        "illuminate/support": "^6.0.0"
     },
     "require-dev": {
         "ext-mbstring": "*",
         "friendsofphp/php-cs-fixer": "^2.15",
-        "phpunit/phpunit": "^8.3"
+        "phpunit/phpunit": "^8.5"
     },
     "autoload": {
         "psr-4": {
