--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,9 @@
     "version": "3.2.1",
     "require": {
         "php": "^7.4.0",
-        "illuminate/contracts": "^6.0.0",
-        "illuminate/database": "^6.0.0",
-        "illuminate/support": "^6.0.0"
+        "illuminate/contracts": "^6.0.0|^7.0.0|^8.0.0",
+        "illuminate/database": "^6.0.0|^7.0.0|^8.0.0",
+        "illuminate/support": "^6.0.0|^7.0.0|^8.0.0"
     },
     "require-dev": {
         "ext-mbstring": "*",
