feat(eloquent): Add 2 new traits.
* \DMX\Support\Database\Eloquent\Models\Concerns\CanBeFilledByArray
* \DMX\Support\Database\Eloquent\Models\Concerns\CanBeFilledByRequest

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "php": ">=7.4.0",
         "illuminate/contracts": "^6.0.0|^7.0.0|^8.0.0",
         "illuminate/database": "^6.0.0|^7.0.0|^8.0.0",
-        "illuminate/support": "^6.0.0|^7.0.0|^8.0.0"
+        "illuminate/support": "^6.0.0|^7.0.0|^8.0.0",
+        "illuminate/http": "^6.0.0|^7.0.0|^8.0.0"
     },
     "require-dev": {
         "ext-mbstring": "*",
