--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,15 @@
     "type": "library",
     "version": "4.3.1",
     "require": {
-        "php": "^7.4.0|^8.0.0",
-        "illuminate/contracts": "^6.0.0|^7.0.0|^8.0.0",
-        "illuminate/database": "^6.0.0|^7.0.0|^8.0.0",
-        "illuminate/support": "^6.0.0|^7.0.0|^8.0.0",
-        "illuminate/http": "^6.0.0|^7.0.0|^8.0.0"
+        "php": "^8.0.0",
+        "illuminate/contracts": "^8.0.0|^9.0.0",
+        "illuminate/database": "^8.0.0|^9.0.0",
+        "illuminate/support": "^8.0.0|^9.0.0",
+        "illuminate/http": "^8.0.0|^9.0.0"
     },
     "require-dev": {
         "ext-mbstring": "*",
-        "friendsofphp/php-cs-fixer": "^2.15",
+        "friendsofphp/php-cs-fixer": "^3.2",
         "phpunit/phpunit": "^9.5"
     },
     "autoload": {
