feat: Migrate to PHP 8.2.
# BREAKING CHANGES
* You need PHP >= v8.2.0 to use this package, now!

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: php
 php:
   - 7.4
 
-# faster builds on new travis setup not using super user
+# faster builds on new travis setup not using super-user
 sudo: false
 
 # cache vendor dirs
