--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "type": "library",
     "version": "5.2.1",
     "require": {
-        "php": "^8.0.0",
+        "php": "^8.2.0",
         "illuminate/contracts": "^8.0.0|^9.0.0",
         "illuminate/database": "^8.0.0|^9.0.0",
         "illuminate/support": "^8.0.0|^9.0.0",
@@ -34,9 +34,9 @@
         }
     },
     "scripts": {
-        "test": "vendor/bin/phpunit",
-        "style-fix": "vendor/bin/php-cs-fixer fix",
-        "style-check": "vendor/bin/php-cs-fixer fix --dry-run --using-cache=no"
+        "test": "@php vendor/bin/phpunit",
+        "style-fix": "@php vendor/bin/php-cs-fixer fix",
+        "style-check": "@php vendor/bin/php-cs-fixer fix --dry-run --using-cache=no"
     },
     "config": {
         "preferred-install": "dist"
