--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,10 @@
     "version": "6.0.0",
     "require": {
         "php": "^8.2.0",
-        "illuminate/contracts": "^8.0.0|^9.0.0",
-        "illuminate/database": "^8.0.0|^9.0.0",
-        "illuminate/support": "^8.0.0|^9.0.0",
-        "illuminate/http": "^8.0.0|^9.0.0"
+        "illuminate/contracts": "^8.0.0|^9.0.0|^10.0.0",
+        "illuminate/database": "^8.0.0|^9.0.0|^10.0.0",
+        "illuminate/support": "^8.0.0|^9.0.0|^10.0.0",
+        "illuminate/http": "^8.0.0|^9.0.0|^10.0.0"
     },
     "require-dev": {
         "ext-mbstring": "*",
