feat: Add support for Laravel v11.
# BREAKING CHANGES:
* Set minimum PHP version to ^8.3
* Rename schema blueprint helper method `userAudit` to `blamable`
* Rename schema blueprint helper method `userAuditInclTimestamps` to `blamableInclTimestamps`
* Rename migration property `dbm` to `databaseManager`

# Enhancements
* Add helper method `rawColumn` to blueprint.

--- a/composer.json
+++ b/composer.json
@@ -10,18 +10,18 @@
     ],
     "license": "MIT",
     "type": "library",
-    "version": "6.1.0",
+    "version": "7.1.0",
     "require": {
-        "php": "^8.2.0",
-        "illuminate/contracts": "^8.0.0|^9.0.0|^10.0.0",
-        "illuminate/database": "^8.0.0|^9.0.0|^10.0.0",
-        "illuminate/support": "^8.0.0|^9.0.0|^10.0.0",
-        "illuminate/http": "^8.0.0|^9.0.0|^10.0.0"
+        "php": "^8.3.0",
+        "illuminate/contracts": "^10.0.0|^11.0.0",
+        "illuminate/database": "^10.0.0|^11.0.0",
+        "illuminate/support": "^10.0.0|^11.0.0",
+        "illuminate/http": "^10.0.0|^11.0.0"
     },
     "require-dev": {
         "ext-mbstring": "*",
         "friendsofphp/php-cs-fixer": "^3.2",
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "^11.0.1"
     },
     "autoload": {
         "psr-4": {
