--- a/.gitignore
+++ b/.gitignore
@@ -83,6 +83,8 @@ yarn-error.log
 /build
 /test-reports
 .php_cs.cache
+.php-cs-fixer.cache
 .phpunit.result.cache
+phpunit.xml.bak
 tests/reports/*
 tests/cache/*
